fixed display bug favourite, deleted dummy file, changed layout.scss back to flex-direction: column for visibility

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -7,7 +7,7 @@ body{
 main {
   display: flex;
   height: 100%;
-  flex-direction: row;
+  flex-direction: column;
   background-color: #eef2f9;
   border-bottom: 3px #545149;
   justify-content: space-evenly;
@@ -15,7 +15,7 @@ main {
 
 section {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 }
 
 .card {
